# backend

./: .gitignore  README.md  pyproject.toml
backend/: settings.py  urls.py
fiordispino/: admin.py  apps.py  authentication.py  managers.py  permissions.py  signals.py  urls.py  views.py
fiordispino/core/: docs_utils.py  exceptions.py  utils.py  validators.py
fiordispino/migrations/: 0001_initial.py  0002_alter_gamestoplay_game_gameplayed.py  0002_alter_user_username.py  0002_game.py  0002_game_global_rating_game_rating_count.py  0003_alter_game_global_rating.py  0003_gamestoplay.py  0004_gamestoplay_created_at_gamestoplay_updated_at.py
fiordispino/models/: __init__.py  game.py  game_played.py  games_to_play.py  genre.py  user.py
fiordispino/serializers/: __init__.py  game_serializer.py  games_played_serializer.py  games_to_play_serializer.py  genre_serializers.py  login_serializers.py  register_serializers.py  user_serializer.py
fiordispino/tests/: conftest.py  test_authentication.py  test_managers.py  test_signals.py  test_views.py  utils_testing.py
fiordispino/tests/core/: test_utils.py
fiordispino/tests/core/validators/: test_validate_description.py  test_validate_game_title.py  test_validate_genre.py  test_validate_global_rating.py  test_validate_pegi.py  test_validate_publisher.py  test_validate_username.py  test_validate_vote.py
fiordispino/tests/models/: test_game.py  test_games_played.py  test_games_to_play.py  test_genre.py  test_user.py
fiordispino/tests/serializers/: test_user_serializer.py
fiordispino/tests/urls/: test_admin_permissions.py  test_game_played_url.py  test_game_to_play_url.py  test_game_urls.py  test_genre_urls.py  test_user_urls.py
fiordispino/tests/views/: test_game_played_view.py  test_game_to_play_view.py  test_game_views.py  test_genre_view.py  test_user_view.py
fiordispino/views/: __init__.py  genre_views.py
primitives/: exceptions.py  game_title.py  pegi.py  publisher.py  vote.py
tests/primitives/: test_game_title.py  test_pegi.py  test_publisher.py  test_vote.py
