[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "valid8 (>=5.1.2,<6.0.0)",
    "typeguard (>=4.4.4,<5.0.0)",
    "coverage (>=7.12.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
